--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,16 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_course
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=test
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
 jwt.secret=MYJWTSECRET
 jwt.expiration=3600000
+
