--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,10 +3,11 @@ spring.datasource.username=postgres
 spring.datasource.password=test
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
+spring.profiles.active=test
 
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
